Implemented vertx GET endpoints